<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.endolife.elfit.views.CustomAlgoResultsActivity"
    tools:showIn="@layout/activity_custom_algo_results">

    <TextView
        android:id="@+id/totalsteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_steps_custom_algo_results"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/total_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/totalsteps"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/totaldistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance_custom_algo_results"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/total_steps"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/total_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/totaldistance"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        />


    <TextView
        android:id="@+id/totalduration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_duration_custom_algo_results"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/total_distance"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/total_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/totalduration"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/averagespeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_speed_custom_algo_results"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/total_duration"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/averagespeed"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/averagefrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_step_frequency_custom_algo_results"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/average_speed"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/average_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/averagefrequency"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/caloriesburned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_burned_custom_algo_results"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/average_frequency"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/calories_burned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/caloriesburned"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/physicalactivitytype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_type_custom_algo_results"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/calories_burned"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/physical_activitytype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/physicalactivitytype"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        />

</RelativeLayout>
